[package]
name = "soroban-eth-abi"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.74"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = {version = "20.5.0", features = ["alloc"]}
alloy-sol-types = {version="0.7.6"}

[dev-dependencies]
soroban-sdk = {version = "20.5.0", features = ["testutils"]}

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
